# justrx

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README  TODO
.github/workflows/: main.yml
src/: ccl.c  ccl.h  dfa-interpreter-min.c  dfa-interpreter-std.c  dfa-interpreter-std.h  dfa.c  dfa.h  jlocale.c  jlocale.h  jrx-intern.h  jrx.c  jrx.h  khash.h  nfa.c  nfa.h  re-parse.y  re-scan.l  set.h  util.c  vector.h
src/tests/: CMakeLists.txt  benchmark.cc  retest.c  test_set.c  testregex.c
test/: retest.c
tests/: Makefile  btest.cfg
tests/Baseline/justrx.posix/: output
tests/justrx/: case-insensitive  group-match  single-match
